# GreedySnake

./: CMakeLists.txt  GreedySnake.sln  main.cpp  widget.cpp  widget.h
Debug/: GreedySnake.ilk
GreedySnake/: GreedySnake.cpp  GreedySnake.h  GreedySnake.vcxproj  GreedySnake.vcxproj.filters  test.cpp
GreedySnake/Debug/: vc141.idb
GreedySnake/Debug/GreedySnake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GreedySnake.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GreedySnake/x64/Debug/: vc141.idb
GreedySnake/x64/Debug/GreedySnake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GreedySnake.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: GreedySnake.ilk
